# FastRS

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
fastrs/: __init__.py  __main__.py  app.py  cli.py  config.py  config_loader.py  log.py  main.py
fastrs/api/: middleware.py
fastrs/api/routes/: health.py  model.py  modules.py  pipeline.py  recommend.py
fastrs/cli/: main.py
fastrs/core/: __init__.py  app.py  engine.py  events.py  registry.py  types.py
fastrs/db/: __init__.py  postgres.py  redis.py
fastrs/filter/: __init__.py  base.py  blacklist.py  dedup.py  registry.py  rules.py
fastrs/logging/: __init__.py  logger.py
fastrs/models/: __init__.py  base.py  manager.py  schemas.py
fastrs/models/torch/: base.py  serving.py  trainer.py
fastrs/mq/: __init__.py  base.py  memory.py  redis_stream.py
fastrs/pipeline/: __init__.py  base.py  data.py  loader.py  registry.py  transform.py
fastrs/ranking/: __init__.py  base.py  model.py  registry.py  rule.py  score.py
fastrs/recall/: __init__.py  base.py  collaborative.py  popular.py  registry.py  vector.py
fastrs/utils/: helpers.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_config_loader.py  test_engine.py  test_filter.py  test_mq.py  test_pipeline.py  test_postgres.py  test_ranking.py  test_recall.py  test_redis.py  test_registry.py
