[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastrs"
version = "0.1.0"
description = "A production-grade Recommendation System for Everything, built with FastAPI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bonifacez" },
]
keywords = ["recommendation-system", "fastapi", "machine-learning", "retrieval", "ranking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer[all]>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.26.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]
all = [
    "fastrs[torch,dev]",
]

[project.scripts]
fastrs = "fastrs.cli.main:app"

[project.urls]
Homepage = "https://github.com/Bonifacez/FastRS"
Repository = "https://github.com/Bonifacez/FastRS"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["fastrs"]
