[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastrs"
version = "0.1.0"
description = "High-performance production-grade recommendation system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.12.0",
    "numpy>=1.26.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
redis = ["redis>=5.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
fastrs = "fastrs.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["fastrs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
